<resources>
    <string name="app_name">Notes</string>
    <string name="delete">Delete</string>
    <string name="hint">Enter Note here!!</string>
    <string name="submit_btn">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="add_title_here">Add Title here</string>
    <string name="back">back</string>
    <string name="done">Done</string>
    <string name="add_description">Add Description here</string>
    <string name="are_you_sure">Are you sure?\nDelete all Notes?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="dot">…</string>
    <string name="add_note_desc">Tap + to add new note</string>
    <string name="delete_all">Delete All</string>
</resources>